--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-dark text-white">
   <div class="container text-center">
-    <h1 class=" text-success col-md-6 mx-auto mb-5 mt-5">BEN's TEXT-<span class="text-primary">2</span>-SPEECH</h1>
+    <h1 class=" text-success col-md-6 mx-auto mb-5 mt-5">TEXT-<span class="text-primary">2</span>-SPEECH</h1>
     <div class="row">
       <div class="col-md-6 mx-auto">
         <form >
@@ -31,6 +31,7 @@
           </div>
           <button class="btn btn-light btn-lg btn-block">Translate</button>
         </form>
+        <p class="text-center text-primary mt-5">created by Benjamin Nyakambangwe</p>
       </div>
     </div>
   </div>
